Fix cases linked to two bulk cases