@@ -25,10 +25,12 @@ import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Deque;
 import java.util.List;
+import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toSet;
 import static java.util.stream.Stream.concat;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.elasticsearch.index.query.QueryBuilders.boolQuery;
@@ -90,7 +92,8 @@ class CcdSearchServiceTest {
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final int from = 0;
         final int pageSize = 100;
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery(STATE, AwaitingApplicant2Response))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()))
@@ -123,8 +126,10 @@ class CcdSearchServiceTest {
             .must(matchQuery(STATE, Submitted))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()));
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(PAGE_SIZE)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(1)).build();
+        final SearchResult expected1 = SearchResult.builder().total(totalCases)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected2 = SearchResult.builder().total(totalCases)
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
 
         when(coreCaseDataApi.searchCases(
             SYSTEM_UPDATE_AUTH_TOKEN,
@@ -152,8 +157,8 @@ class CcdSearchServiceTest {
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()));
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(PAGE_SIZE)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(1)).build();
+        final SearchResult expected1 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected2 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
 
         SearchSourceBuilder sourceBuilder1 = SearchSourceBuilder
             .searchSource()
@@ -201,8 +206,10 @@ class CcdSearchServiceTest {
         final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final int from = 0;
-        final SearchResult expected = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(PAGE_SIZE)).build();
-        final SearchResult expected2 = SearchResult.builder().total(totalCases).cases(createCaseDetailsList(1)).build();
+        final SearchResult expected = SearchResult.builder().total(totalCases)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult expected2 = SearchResult.builder().total(totalCases)
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
         final BoolQueryBuilder query = boolQuery()
             .must(matchQuery("state", AwaitingApplicant2Response))
             .filter(rangeQuery(DUE_DATE).lte(LocalDate.now()))
@@ -246,7 +253,8 @@ class CcdSearchServiceTest {
     void shouldReturnCasesWithVersionOlderThan() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
             .searchSource()
@@ -281,7 +289,8 @@ class CcdSearchServiceTest {
     void shouldReturnBulkCasesWithVersionOlderThan() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected1 = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
             .searchSource()
@@ -336,11 +345,11 @@ class CcdSearchServiceTest {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult searchResult1 = SearchResult.builder().total(PAGE_SIZE)
-            .cases(createCaseDetailsList(PAGE_SIZE)).build();
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
         final SearchResult searchResult2 = SearchResult.builder().total(1)
-            .cases(createCaseDetailsList(1)).build();
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
         final List<CaseDetails> expectedCases = concat(searchResult1.getCases().stream(), searchResult2.getCases().stream())
-            .collect(toList());
+            .collect(toSet()).stream().toList();
 
         when(coreCaseDataApi.searchCases(
             SYSTEM_UPDATE_AUTH_TOKEN,
@@ -354,7 +363,8 @@ class CcdSearchServiceTest {
             CASE_TYPE,
             searchSourceBuilderForAwaitingPronouncementCases(100).toString()))
             .thenReturn(searchResult2);
-        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases)).thenReturn(createConvertedCaseDetailsList(101));
+        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases))
+            .thenReturn(createConvertedCaseDetailsList(101, 1));
 
         final Deque<List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>>> allPages =
             ccdSearchService.searchAwaitingPronouncementCasesAllPages(user, SERVICE_AUTHORIZATION);
@@ -363,6 +373,46 @@ class CcdSearchServiceTest {
         assertThat(allPages.poll().size()).isEqualTo(BULK_LIST_MAX_PAGE_SIZE);
         assertThat(allPages.poll().size()).isEqualTo(BULK_LIST_MAX_PAGE_SIZE);
         assertThat(allPages.poll().size()).isEqualTo(1);
+    }
+
+    @Test
+    void shouldNotReturnDuplicateCasesInStateAwaitingPronouncement() {
+
+        final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
+        final SearchResult searchResult1 = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
+        final SearchResult searchResult2 = SearchResult.builder().total(1)
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
+        final List<CaseDetails> expectedCases = concat(searchResult1.getCases().stream(), searchResult2.getCases().stream())
+            .collect(toSet()).stream().toList();
+        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList1 = createConvertedCaseDetailsList(50, 1);
+        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList2 = createConvertedCaseDetailsList(49, 51);
+        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList3 = createConvertedCaseDetailsList(1, 101);
+
+        when(coreCaseDataApi.searchCases(
+            SYSTEM_UPDATE_AUTH_TOKEN,
+            SERVICE_AUTHORIZATION,
+            CASE_TYPE,
+            searchSourceBuilderForAwaitingPronouncementCases(0).toString()))
+            .thenReturn(searchResult1);
+        when(coreCaseDataApi.searchCases(
+            SYSTEM_UPDATE_AUTH_TOKEN,
+            SERVICE_AUTHORIZATION,
+            CASE_TYPE,
+            searchSourceBuilderForAwaitingPronouncementCases(100).toString()))
+            .thenReturn(searchResult2);
+        when(caseDetailsListConverter.convertToListOfValidCaseDetails(expectedCases))
+            .thenReturn(Stream.of(caseDetailsList1, caseDetailsList2, caseDetailsList3)
+                .flatMap(Collection::stream)
+                .toList());
+
+        final Deque<List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>>> allPages =
+            ccdSearchService.searchAwaitingPronouncementCasesAllPages(user, SERVICE_AUTHORIZATION);
+
+        assertThat(allPages.size()).isEqualTo(2);
+        assertThat(allPages.poll()).isEqualTo(caseDetailsList1);
+        assertThat(allPages.poll()).isEqualTo(Stream.of(caseDetailsList2, caseDetailsList3).flatMap(Collection::stream).toList());
+        assertThat(allPages.poll()).isNull();
     }
 
     @Test
@@ -391,9 +441,9 @@ class CcdSearchServiceTest {
         final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult expectedSearchResult1 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(100)).build();
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
         final SearchResult expectedSearchResult2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1)).build();
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
         final uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState> bulkCaseDetails =
             mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class);
 
@@ -442,9 +492,9 @@ class CcdSearchServiceTest {
         final int totalCases = 101;
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult expectedSearchResult1 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(100)).build();
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
         final SearchResult expectedSearchResult2 = SearchResult.builder().total(totalCases)
-            .cases(createCaseDetailsList(1)).build();
+            .cases(createCaseDetailsList(1, PAGE_SIZE + 1)).build();
         final uk.gov.hmcts.ccd.sdk.api.CaseDetails<BulkActionCaseData, BulkActionState> bulkCaseDetails =
             mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class);
 
@@ -498,7 +548,7 @@ class CcdSearchServiceTest {
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
         final SearchResult expected = SearchResult.builder()
             .total(caseReferences.size())
-            .cases(createCaseDetailsList(caseReferences.size()))
+            .cases(createCaseDetailsList(caseReferences.size(), 1L))
             .build();
 
         SearchSourceBuilder sourceBuilder = SearchSourceBuilder
@@ -526,7 +576,8 @@ class CcdSearchServiceTest {
     void shouldReturnJointApplicationCasesContainingAccessCodePostIssueApplication() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         final QueryBuilder issueDateExist = existsQuery("data.issueDate");
         final QueryBuilder jointApplication = matchQuery("data.applicationType", "jointApplication");
@@ -562,7 +613,8 @@ class CcdSearchServiceTest {
     void shouldReturnCasesInAwaitingAosWhereConfirmReadPetitionIsYes() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         final QueryBuilder confirmReadPetitionYes = matchQuery("data.confirmReadPetition", YesOrNo.YES);
         final QueryBuilder awaitingAosState = matchQuery(STATE, AwaitingAos);
@@ -594,7 +646,8 @@ class CcdSearchServiceTest {
     void shouldReturnJointPaperApplicationsWhereApplicant2OfflineFlagShouldBeSet() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         final QueryBuilder applicant2OfflineExist = existsQuery("data.applicant2Offline");
         final QueryBuilder jointApplication = matchQuery("data.applicationType", "jointApplication");
@@ -630,7 +683,8 @@ class CcdSearchServiceTest {
     void shouldReturnSolePaperApplicationsWhereApplicant2OfflineFlagShouldBeSet() {
 
         final User user = new User(SYSTEM_UPDATE_AUTH_TOKEN, UserDetails.builder().build());
-        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE).cases(createCaseDetailsList(PAGE_SIZE)).build();
+        final SearchResult expected = SearchResult.builder().total(PAGE_SIZE)
+            .cases(createCaseDetailsList(PAGE_SIZE, 1L)).build();
 
         final QueryBuilder applicant2OfflineExist = existsQuery("data.applicant2Offline");
         final QueryBuilder soleApplication = matchQuery("data.applicationType", "soleApplication");
@@ -664,27 +718,30 @@ class CcdSearchServiceTest {
         assertThat(searchResult.size()).isEqualTo(100);
     }
 
-    private List<CaseDetails> createCaseDetailsList(final int size) {
+    private List<CaseDetails> createCaseDetailsList(final int size, final long idStart) {
 
         final List<CaseDetails> caseDetails = new ArrayList<>();
 
         for (int index = 0; index < size; index++) {
-            caseDetails.add(mock(CaseDetails.class));
+            caseDetails.add(CaseDetails.builder().id(idStart + index).build());
         }
 
         return caseDetails;
     }
 
     @SuppressWarnings("unchecked")
-    private List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> createConvertedCaseDetailsList(final int size) {
+    private List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> createConvertedCaseDetailsList(final int size,
+                                                                                                       final long idStart) {
 
-        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetails = new ArrayList<>();
+        final List<uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State>> caseDetailsList = new ArrayList<>();
 
         for (int index = 0; index < size; index++) {
-            caseDetails.add(mock(uk.gov.hmcts.ccd.sdk.api.CaseDetails.class));
+            final uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> caseDetails = new uk.gov.hmcts.ccd.sdk.api.CaseDetails<>();
+            caseDetails.setId(idStart + index);
+            caseDetailsList.add(caseDetails);
         }
 
-        return caseDetails;
+        return caseDetailsList;
     }
 
     private SearchSourceBuilder getSourceBuilder(final int from, final int pageSize) {
